--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-google-api-python-client
-google-auth-httplib2
-google-auth-oauthlib
-httplib2shim
+google_auth_oauthlib==0.4.0
+urllib3==1.24.1
+httplib2shim==0.0.3
+protobuf==3.9.2
+google_api_python_client==1.7.11
